# RoboNautica_2025

./: README.md  try.py  yo.py
ArucoMarkerDetection/: backup.py  first.py
Camera_Calibration/: Aruco_Detection.py  Aruco_Markers.py  Detection.py  Generate_Aruco.py  IPPE.py  PnP_Zhang.py  README.md  SquarePnP.py  TEST.py  TestGen.py  calibration.pkl  calibration.py  cameraMatrix.pkl  dist.pkl  for_future.py  getImages.py  pnp.py  testing.py
autonomous_tb3/: package.xml  setup.py
autonomous_tb3/launch/: gazebo_launch.py  test_launch.py
autonomous_tb3/scripts/: EKF.py  goalpublish.py
autonomous_tb3/urdf/: mecanum_robot.urdf
robonautic_pkg/: package.xml  setup.cfg  setup.py
robonautic_pkg/robonautic_pkg/: PID.py  aruco.py  calibration.pkl  camera.py  cameraMatrix.pkl  dist.pkl
